test/features/errors/semantic/e1072_invalid_destructuring.spl
# E1072: Invalid Destructuring

Feature: E1072 - Invalid Destructuring Assignment
  As a Simple compiler
  I want to detect invalid destructuring assignments
  So that destructuring patterns are well-formed

  Background:
    Given I have the Simple compiler

  Scenario: Invalid destructuring pattern
    When I compile:
      '''
      fn test():
        val (x, y, z) = (1, 2)  # Error: mismatched tuple sizes
      '''
    Then I should see error E1072 at line 2
    And the error message should be "invalid destructuring assignment"
    And the label should indicate "invalid destructuring"
    And the help should suggest "check the destructuring pattern syntax"

  Scenario: Invalid field destructuring
    When I compile:
      '''
      struct Point:
        x: i32
        y: i32

      fn test():
        val Point { x, z } = Point { x: 0, y: 0 }  # Error: no field 'z'
      '''
    Then I should see error E1072

  Scenario: Valid destructuring
    When I compile:
      '''
      fn test():
        val (x, y) = (1, 2)  # OK: matching sizes

      struct Point:
        x: i32
        y: i32

      fn test2():
        val Point { x, y } = Point { x: 0, y: 0 }  # OK
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      fn test():
        val (x, y, z) = (1, 2)
      '''
    Then I should see error E1072
    And the error message should contain "잘못된 구조 분해"
